--- a/ui-config-tool/src/app/panel/panel.component.css
+++ b/ui-config-tool/src/app/panel/panel.component.css
@@ -292,55 +292,6 @@ i {
 }
 
 
-/* The Modal (background) */
-
-.modal {
-    display: none;
-    /* Hidden by default */
-    position: fixed;
-    /* Stay in place */
-    z-index: 1;
-    /* Sit on top */
-    padding-top: 100px;
-    /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%;
-    /* Full width */
-    height: 100%;
-    /* Full height */
-    overflow: auto;
-    /* Enable scroll if needed */
-    background-color: rgb(0, 0, 0);
-    /* Fallback color */
-    background-color: rgba(0, 0, 0, 0.4);
-    /* Black w/ opacity */
-}
-
-
-/* Modal Content */
-
-.modal-content {
-    background-color: #fefefe;
-    margin: auto;
-    padding: 20px;
-    padding-top: 10px;
-    border: 1px solid #888;
-    width: 50%;
-    max-height: 100%;
-    overflow: auto;
-    align-content: center;
-}
-
-.modal-row {
-    position: relative;
-    float: left;
-    margin: auto;
-    margin-top: 5px;
-    width: 100%;
-}
-
-
 /* The Close Button */
 
 .close {
@@ -368,7 +319,7 @@ i {
 
 @media (max-width: 1260px) {
     .panel-row-display {
-        max-width: 91%;
+        max-width: 90%;
     }
     .panel-label {
         width: 22%;
@@ -382,11 +333,17 @@ i {
     .panel-select {
         width: 22%;
     }
+    .panel-row-input {
+        max-width: 85%;
+    }
     .panel-displayIcon-btn {
-        margin-right: 1%;
+        margin-right: -1%;
     }
     .panel-inputIcon-btn {
         margin-right: 2%;
+    }
+    .cherry-display {
+        padding-right: 6px;
     }
 }
 
@@ -403,6 +360,30 @@ i {
     .panel-select {
         width: 25%;
     }
+    .panel-label-input {
+        margin-left: 15px;
+    }
+    .panel-row-input {
+        max-width: 100%;
+    }
 }
 
-@media (max-width: 870px) {}
+@media (max-width: 870px) {
+    .panel-row-display {
+        max-width: 100%;
+    }
+    .cherry-display {
+        padding-right: 3px;
+        padding-left: 3px;
+        margin-right: -2%;
+    }
+    .panel-select-short {
+        width: 20%;
+    }
+    .panel-label-input {
+        margin-left: 4%;
+    }
+    .panel-row-input {
+        max-width: 80%;
+    }
+}
