--- a/ui-config-tool/src/styles.css
+++ b/ui-config-tool/src/styles.css
@@ -1,74 +1,130 @@
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 html {
-  height: 100%;
+    height: 100%;
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
-  margin: 0;
-  overflow: auto;
-  position: relative;
-  background-color: #f2f2f2;
-  height: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    overflow: auto;
+    position: relative;
+    background-color: #f2f2f2;
+    height: 100%;
 }
 
+
 /*INPUT STYLING*/
-input[type=text], select, textarea {
-  width: 100%;
-  padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  resize: vertical;
+
+input[type=text],
+select,
+textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: vertical;
 }
 
 input[type=submit] {
-  background-color: #4CAF50;
-  color: white;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  float: right;
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    float: right;
 }
 
 input[type=submit]:hover {
-  background-color: #45a049;
+    background-color: #45a049;
 }
 
 input:focus {
-  outline-color: #0066ff;
+    outline-color: #0066ff;
 }
 
 label {
-  padding: 12px 12px 12px 0;
-  display: inline-block;
+    padding: 12px 12px 12px 0;
+    display: inline-block;
 }
 
+
 /* SHOW/HIDE CLASSES */
+
 .hidden {
-  display: none;
+    display: none;
 }
 
 .unhidden {
-  display: block;
+    display: block;
 }
 
 .content {
-  padding: 16px;
+    padding: 16px;
 }
 
 .sticky {
-  position: fixed;
-  top: 0;
-  width: 100%;
+    position: fixed;
+    top: 0;
+    width: 100%;
 }
 
-.sticky + .content {
-  padding-top: 102px;
+.sticky+.content {
+    padding-top: 102px;
 }
+
+
+/* The Modal (background) */
+
+.modal {
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 1;
+    /* Sit on top */
+    padding-top: 100px;
+    /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
+}
+
+
+/* Modal Content */
+
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    padding-top: 10px;
+    border: 1px solid #888;
+    width: 50%;
+    max-height: 100%;
+    overflow: auto;
+    align-content: center;
+}
+
+.modal-row {
+    position: relative;
+    float: left;
+    margin: auto;
+    margin-top: 5px;
+    width: 100%;
+}
+
 
 /* Responsive layout - when the screen is less than 1000px wide, make the two columns stack on top of each other instead of next to each other
 @media (max-width: 1000px) {
