--- a/ui-config-tool/src/app/app.component.html
+++ b/ui-config-tool/src/app/app.component.html
@@ -1,21 +1,22 @@
 <div class="main-wrapper">
-  <header class='header'>
-    <h1>TEC Pi Setup</h1>
-  </header>
+    <header class='header'>
+        <h1>TEC Pi Setup</h1>
+    </header>
 
-  <nav class="navbar" id="NavBar">
-    <a routerLink="/newroom" routerLinkActive="active">New Room</a>
-    <a routerLink="/editroom" routerLinkActive="active">Edit Room</a>
-    <a href="#" class="right">Something</a>
-  </nav>
-  <body>
-    <div class="wrapper">
-      <router-outlet></router-outlet>
-      <div class="push"></div>
-    </div>
-  </body>
+    <nav class="navbar" id="NavBar">
+        <a routerLink="/newroom" routerLinkActive="active">New Room</a>
+        <a routerLink="/editroom" routerLinkActive="active">Edit Room</a>
+        <a href="http://localhost:4200" class="right">Config DB</a>
+    </nav>
 
-  <footer class="footer">
-    <h5>Brigham Young University - OIT</h5>
-  </footer>
+    <body>
+        <div class="wrapper">
+            <router-outlet></router-outlet>
+            <div class="push"></div>
+        </div>
+    </body>
+
+    <footer class="footer">
+        <h5>Brigham Young University - OIT</h5>
+    </footer>
 </div>
